some modified code
